Update images in Southern Growers event details

--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -121,7 +121,13 @@ show: true
     <div class="col-sm-12">
       <img
         class="img-fluid w-100"
-        src="/assets/images/2020-SWG-Save-the-Date.png"
+        src="/assets/images/tournament-winner.png"
+      />
+    </div>
+    <div class="col-sm-12">
+      <img
+        class="img-fluid w-100"
+        src="/assets/images/winners.png"
       />
     </div>
   </div>
