--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -53,10 +53,12 @@ permalink: index.html
                 <img class="img-fluid w-100" src="/assets/images/memo.jpg"/>
             </div>
             <div class="col-lg-6">
-                <div class="col-sm-12 p-0">
-                    <h2 class="h1">$102,500 <span class="h5 text-muted">raised of $120,000 goal</span></h2>
+                <div class="col-sm-12 p-0 pyro">
+                    <div class="before"></div>
+  <div class="after"></div>
+                    <h2 class="h1">$120,000 <span class="h5 text-muted">raised of $120,000 goal</span></h2>
                     <div class="progress" style="height: 2.5rem">
-                        <div style="width: 85%" class="progress-bar" role="progressbar" aria-valuenow="102" aria-valuemin="0" aria-valuemax="120"></div>
+                        <div style="width: 100%" class="progress-bar" role="progressbar" aria-valuenow="120" aria-valuemin="0" aria-valuemax="120"></div>
                     </div>          
                 </div>
                 <div class="col-sm-12 p-0">
