--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -45,6 +45,23 @@ permalink: index.html
 </section>
 <section class="py-5">
     <div class="container">
+        <div class="row position-relative">
+            
+            <div class="col-lg-12">
+                <img class="img-fluid w-100" src="/assets/images/thanksgiving-campaign.png"/>
+            </div>
+            <div class="col-md-12 pt-3">
+                <p>Thanksgiving is a time to pause, reflect and give thanks!  We at Boys & Girls Clubs of Coachella Valley are thankful to have a Friend like you!</p>
+                <p>During these unprecedented times, some of our kids may have to dig deep to find something to be thankful for.  Many of their parents are out of work and some get their best meal at the Club - times are tough and therefore, some kids may not be in a position to receive a Thanksgiving meal.</p>
+                <p>When faced with tough times, we rise (together) to the occasion to ensure that our kids receive a complete Thanksgiving meal.  If we are able to generate $10,000 ($2,500 per Club), we can make sure each kid/family in need receives a Thanksgiving dinner. </p>
+                <p>Please consider making a contribution (of any size) to help us help those who need it most.  Again, we are so thankful for you and we are fortunate to have you as a Friend!</p>
+            </div>
+            <a class="stretched-link" href="https://interland3.donorperfect.net/weblink/weblink.aspx?name=E331203&id=55" target="_blank" rel="noopener"></a>
+        </div>
+    </div>
+</section>
+{%- comment -%} <section class="py-5">
+    <div class="container">
         <div class="row">
             <div class="col-sm-12">
                 <h1>Help Us Reopen Our Clubs</h1>
@@ -77,7 +94,7 @@ permalink: index.html
             </div>
         </div>
     </div>
-</section>
+</section> {%- endcomment -%}
 <section class="py-5">
     <div class="container d-flex justify-content-center">
         <div class="row">
