Replace Thanksgiving campaign with 1966 campaign

--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -44,19 +44,29 @@ permalink: index.html
     role="button" class="call-to-action shadow btn btn-secondary px-5 py-4 text-white btn-lg mx-auto">DONATE NOW</a>
 </section>
 <section class="py-5">
-    <div class="container">
-        <div class="row position-relative">
-            
-            <div class="col-lg-12">
-                <img class="img-fluid w-100" src="/assets/images/thanksgiving-campaign.png"/>
+    <div class="container d-flex justify-content-center">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="card shadow-sm" style="overflow: hidden">
+                    <div class="row no-gutter">
+                        <div class="col-md-6 p-0">
+                                <img src="/assets/images/campaign-1966.png" class="rounded-0 card-img-top img-fluid"
+                                alt="We are in this together" />
+                        
+                        </div>
+                        <div class="col-md-6 p-0">
+                            <div class="card-body h-100">
+                                <p class="h2 font-weight-bold text-center">Campaign 1966...</p>
+                                <p>Since 1966, Boys & Girls Clubs of Coachella Valley has delivered youth development programs and services to thousands of kids of hard-working parents. Today, it operates four clubs (Coachella, Indio, La Quinta and Mecca) as educational enrichment centers to assist with distance learning. To make a gift in honor of their upcoming 55th anniversary in 2021, <a href="http://weblink.donorperfect.com/CAMPAIGN1966"
+                                    target="_blank"
+                                    class="stretched-link"
+                                    style="color: #006caa"
+                                    rel="noopener">please consider making a recurring monthly gift of $19.66 by clicking here</a>.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-12 pt-3">
-                <p>Thanksgiving is a time to pause, reflect and give thanks!  We at Boys & Girls Clubs of Coachella Valley are thankful to have a Friend like you!</p>
-                <p>During these unprecedented times, some of our kids may have to dig deep to find something to be thankful for.  Many of their parents are out of work and some get their best meal at the Club - times are tough and therefore, some kids may not be in a position to receive a Thanksgiving meal.</p>
-                <p>When faced with tough times, we rise (together) to the occasion to ensure that our kids receive a complete Thanksgiving meal.  If we are able to generate $10,000 ($2,500 per Club), we can make sure each kid/family in need receives a Thanksgiving dinner. </p>
-                <p>Please consider making a contribution (of any size) to help us help those who need it most.  Again, we are so thankful for you and we are fortunate to have you as a Friend!</p>
-            </div>
-            <a class="stretched-link" href="https://interland3.donorperfect.net/weblink/weblink.aspx?name=E331203&id=55" target="_blank" rel="noopener"></a>
         </div>
     </div>
 </section>
