--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -57,7 +57,7 @@ permalink: index.html
                         <div class="col-md-6 p-0">
                             <div class="card-body h-100">
                                 <p class="h2 font-weight-bold text-center">Campaign 1966...</p>
-                                <p>Since 1966, Boys & Girls Clubs of Coachella Valley has delivered youth development programs and services to thousands of kids of hard-working parents. Today, it operates four clubs (Coachella, Indio, La Quinta and Mecca) as educational enrichment centers to assist with distance learning. To make a gift in honor of their upcoming 55th anniversary in 2021, <a href="http://weblink.donorperfect.com/CAMPAIGN1966"
+                                <p>Since 1966, Boys & Girls Clubs of Coachella Valley has delivered youth development programs and services to thousands of kids of hard-working parents. Today, it operates four clubs (Coachella, Indio, La Quinta and Mecca) as educational enrichment centers to assist with distance learning. To make a gift in honor of our upcoming 55th anniversary in 2021, <a href="http://weblink.donorperfect.com/CAMPAIGN1966"
                                     target="_blank"
                                     class="stretched-link"
                                     style="color: #006caa"
