Update Campaign 1966 image

--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -50,7 +50,7 @@ permalink: index.html
                 <div class="card shadow-sm" style="overflow: hidden">
                     <div class="row no-gutter">
                         <div class="col-md-6 p-0">
-                                <img src="/assets/images/campaign-1966.png" class="rounded-0 card-img-top img-fluid"
+                                <img src="/assets/images/campaign-1966.jpg" class="rounded-0 card-img-top img-fluid"
                                 alt="We are in this together" />
                         
                         </div>
