--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -54,14 +54,17 @@ permalink: index.html
                                 alt="We are in this together" />
                         
                         </div>
-                        <div class="col-md-6 p-0">
+                        <div class="col-md-6 p-0" style="position: static">
                             <div class="card-body h-100">
                                 <p class="h2 font-weight-bold text-center">Campaign 1966...</p>
-                                <p>Since 1966, Boys & Girls Clubs of Coachella Valley has delivered youth development programs and services to thousands of kids of hard-working parents. Today, it operates four clubs (Coachella, Indio, La Quinta and Mecca) as educational enrichment centers to assist with distance learning. To make a gift in honor of our upcoming 55th anniversary in 2021, <a href="http://weblink.donorperfect.com/CAMPAIGN1966"
+                                <p><b>We <i>believe</i> in the future of our youth and we believe you do too!</b></p>
+                                <p>The “Indio Club” started doing life-changing work for boys in 1966 and saw the light in 1990 and extended those same services to girls. Today, the Boys & Girls Clubs of Coachella Valley, which consists of seven sites in four of the most underserved communities, provide services for over 6000 youth on an annual basis. We believe that over the last five decades, our services have had a positive difference in the lives of thousands of youth, and we believe that we must work diligently to ensure that we are around for five more decades. We believe that when people are given a chance to make a difference, they respond. <b>We are asking you to respond to our call to action by make a recurring monthly 100% tax-deductible gift of $19.66 to help us help those who need it most.</b></p>
+                                    
+                                <p class="d-flex justify-content-center"><a href="http://weblink.donorperfect.com/CAMPAIGN1966"
                                     target="_blank"
-                                    class="stretched-link"
-                                    style="color: #006caa"
-                                    rel="noopener">please consider making a recurring monthly gift of $19.66 by clicking here</a>.</p>
+                                    class="stretched-link text-uppercase btn btn-primary"
+                                    rel="noopener">Donate Now</a>
+                                </p>
                             </div>
                         </div>
                     </div>
