--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -47,7 +47,14 @@ permalink: index.html
     <div class="container d-flex justify-content-center">
         <div class="row">
             <div class="col-sm-12">
-                <div class="card shadow-sm" style="overflow: hidden">
+            <div class="card bg-dark text-white">
+  <img src="/assets/images/campaign-love.png" class="card-img" alt="...">
+  <div class="card-img-overlay">
+    <a href="https://interland3.donorperfect.net/weblink/weblink.aspx?name=E331203&id=57" target="_blank"
+    rel="noopener" class="stretched-link"></a>
+  </div>
+</div>
+                {% comment %} <div class="card shadow-sm" style="overflow: hidden">
                     <div class="row no-gutter">
                         <div class="col-md-6 p-0">
                                 <img src="/assets/images/campaign-1966.jpg" class="rounded-0 card-img-top img-fluid"
@@ -68,7 +75,7 @@ permalink: index.html
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> {% endcomment %}
             </div>
         </div>
     </div>
