Update Be in the Know and schedule

--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -48,7 +48,7 @@ permalink: index.html
         <div class="row">
             <div class="col-sm-12">
             <div class="card bg-dark text-white">
-  <img src="/assets/images/campaign-love.png" class="card-img" alt="...">
+  <img src="/assets/images/campaign-love.png" class="card-img" alt="Love Campaign">
   <div class="card-img-overlay">
     <a href="https://interland3.donorperfect.net/weblink/weblink.aspx?name=E331203&id=57" target="_blank"
     rel="noopener" class="stretched-link"></a>
