--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -47,12 +47,35 @@ permalink: index.html
     <div class="container d-flex justify-content-center">
         <div class="row">
             <div class="col-sm-12">
-            <div class="card bg-dark text-white">
+            {% comment %} <div class="card bg-dark text-white">
   <img src="/assets/images/campaign-love.png" class="card-img" alt="Love Campaign">
   <div class="card-img-overlay">
     <a href="https://interland3.donorperfect.net/weblink/weblink.aspx?name=E331203&id=57" target="_blank"
     rel="noopener" class="stretched-link"></a>
-  </div>
+  </div> {% endcomment %}
+
+   <div class="card shadow-sm" style="overflow: hidden">
+                    <div class="row no-gutter">
+                        <div class="col-md-6 p-0">
+                                <img src="/assets/images/campaign-1966.jpg" class="rounded-0 card-img-top img-fluid"
+                                alt="We are in this together" />
+                        
+                        </div>
+                        <div class="col-md-6 p-0" style="position: static">
+                            <div class="card-body h-100">
+                                <p class="h2 font-weight-bold text-center">Campaign 1966...</p>
+                                <p><b>We <i>believe</i> in the future of our youth and we believe you do too!</b></p>
+                                <p>The “Indio Club” started doing life-changing work for boys in 1966 and saw the light in 1990 and extended those same services to girls. Today, the Boys & Girls Clubs of Coachella Valley, which consists of seven sites in four of the most underserved communities, provide services for over 6000 youth on an annual basis. We believe that over the last five decades, our services have had a positive difference in the lives of thousands of youth, and we believe that we must work diligently to ensure that we are around for five more decades. We believe that when people are given a chance to make a difference, they respond. <b>We are asking you to respond to our call to action by make a recurring monthly 100% tax-deductible gift of $19.66 to help us help those who need it most.</b></p>
+                                    
+                                <p class="d-flex justify-content-center"><a href="http://weblink.donorperfect.com/CAMPAIGN1966"
+                                    target="_blank"
+                                    class="stretched-link text-uppercase btn btn-primary"
+                                    rel="noopener">Donate Now</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
 </div>
                 {% comment %} <div class="card shadow-sm" style="overflow: hidden">
                     <div class="row no-gutter">
