--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -4,8 +4,8 @@ title: Southwestern Growers Golf Tournament
 description: >-
   Join us this year at our Annual Southwestern Growers Golf Tournament.
 image: /assets/images/iwcc-pic-2.png
-start_date: 2020-09-18
-end_date: 2020-09-20
+start_date: 2021-09-17
+end_date: 2021-09-19
 contact:
   email: bkerr@bgcofcv.org
   name: Bridget Kerr
@@ -13,9 +13,9 @@ contact:
     extension: "105"
     number: (760) 836-1160
   title: Director of Special Events
-callToAction:
-  text: 2020 SWG Pairings
-  url: "/assets/2020-SWG-Flights.pdf"
+# callToAction:
+#  text: 2020 SWG Pairings
+#  url: "/assets/2020-SWG-Flights.pdf"
 time:
   endTime: Invalid date
   startTime: Invalid date
