--- a/root/jekyll/_program-categories/college-scholarship.html
+++ b/root/jekyll/_program-categories/college-scholarship.html
@@ -5,7 +5,7 @@ description: Since 1974, the Boys & Girls Clubs of Coachella Valley has helped h
 hero: assets/images/scholarship.jpg
 callToAction:
     text: Apply
-    link: https://onefuturecv.c2nav.com/#/
+    link: https://bgccv.c2nav.com/#/login
 ---
 
 <div class="col-sm-12">
