Update home page with new campaign

--- a/root/jekyll/_events/virtual-grand-auction-2021.html
+++ b/root/jekyll/_events/virtual-grand-auction-2021.html
@@ -23,7 +23,10 @@ show: true
   <div class="container">
     <div class="col-sm-12">
       <h4>
-        Bidding opens Friday, May 7th @ 3 PM and closes Tuesday, May 11th 3 PM
+        Registration & Item Preview opens 8 AM, Wednesday, May 5th. Bidding
+        opens at high-noon on Friday, May 7th and closes at 8 PM, Tuesday, May
+        11th. Event link and mobile code will be available on our website before
+        registration opens May 5th.
       </h4>
       {%- comment -%}
       <img
