--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -47,6 +47,11 @@ permalink: index.html
     <div class="container d-flex justify-content-center">
         <div class="row">
             <div class="col-sm-12">
+            <div class="card bg-dark text-white">
+  <img src="/assets/images/campaign-auction.png" class="card-img" alt="Grand Auction 2021">
+  <div class="card-img-overlay">
+    <a href="/events/virtual-grand-auction-2021" class="stretched-link"></a>
+  </div>
             {% comment %} <div class="card bg-dark text-white">
   <img src="/assets/images/campaign-love.png" class="card-img" alt="Love Campaign">
   <div class="card-img-overlay">
@@ -54,7 +59,7 @@ permalink: index.html
     rel="noopener" class="stretched-link"></a>
   </div> {% endcomment %}
 
-   <div class="card shadow-sm" style="overflow: hidden">
+   {%- comment -%} <div class="card shadow-sm" style="overflow: hidden">
                     <div class="row no-gutter">
                         <div class="col-md-6 p-0">
                                 <img src="/assets/images/campaign-1966.jpg" class="rounded-0 card-img-top img-fluid"
@@ -76,7 +81,7 @@ permalink: index.html
                         </div>
                     </div>
                 </div> 
-</div>
+</div> {%- endcomment -%}
                 {% comment %} <div class="card shadow-sm" style="overflow: hidden">
                     <div class="row no-gutter">
                         <div class="col-md-6 p-0">
