Update auction event picture

--- a/root/jekyll/_events/virtual-grand-auction-2021.html
+++ b/root/jekyll/_events/virtual-grand-auction-2021.html
@@ -1,7 +1,7 @@
 ---
 layout: events-layout
 title: Virtual Grand Auction 2021
-description: Spring into Action, Bid for a Kid!
+description: Spring into Action, Bid to help a Kid!
 image: /assets/images/auction-2021.png
 start_date: 2021-05-07
 end_date: 2021-05-11
@@ -31,7 +31,7 @@ show: true
       {%- comment -%}
       <img
         class="img-fluid"
-        src="/assets/images/BGCCV DS Auction 2020_Page_1.png"
+        src="/assets/images/campaign-auction.png"
       />
       {%- endcomment -%}
     </div>
