Update auction event details

--- a/root/jekyll/_events/virtual-grand-auction-2021.html
+++ b/root/jekyll/_events/virtual-grand-auction-2021.html
@@ -22,17 +22,14 @@ show: true
 <section class="row">
   <div class="container">
     <div class="col-sm-12">
-      <h4>
+      <p>
         Registration & Item Preview opens 8 AM, Wednesday, May 5th. Bidding
         opens at high-noon on Friday, May 7th and closes at 8 PM, Tuesday, May
         11th. Event link and mobile code will be available on our website before
         registration opens May 5th.
-      </h4>
+      </p>
       {%- comment -%}
-      <img
-        class="img-fluid"
-        src="/assets/images/campaign-auction.png"
-      />
+      <img class="img-fluid" src="/assets/images/campaign-auction.png" />
       {%- endcomment -%}
     </div>
     {%- comment -%}
@@ -43,6 +40,87 @@ show: true
       />
     </div>
     {%- endcomment -%}
+  </div>
+</section>
+<section class="py-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <p class="h3 text-center">Terms and Conditions</p>
+        <p class="h4 font-weight-bold">Before the Auction</p>
+        <p>
+          Items will be available to preview beginning Wednesday, May 5th at
+          7:47am. The link for computer bidding and code for Text2Bid will be
+          emailed out as well as posted on the BGC of CV website www.bgcofcv.org
+          prior to May 5th.
+        </p>
+        <p class="h4 font-weight-bold">The Auction</p>
+        <p>
+          The Auction opens at high noon on Friday, May 7th, 2021 and closes at
+          8pm Tuesday, May 11th, 2021. When the bidding window opens all Donors
+          and Bidders must create an account providing their phone number and
+          email information before being assigned a bidding number unique to
+          their account. We accept American Express, MasterCard, Visa and Check.
+        </p>
+        <p>
+          Bidders can register and bid on their mobile phone, enabling real time
+          notifications (texts) regarding items they are actively bidding on.
+          Bidders can also register and bid on other computer and tablet
+          devices, but will not receive notifications; instead they will have to
+          monitor their items manually. Bidders have the opportunity to purchase
+          items without bidding, by selecting the guaranteed price. Auction
+          winners will be notified by text and/or email after the auction closes
+          at 8pm Tuesday, May 11th, 2021.
+        </p>
+      </div>
+      <div class="col-sm-12">
+        <p class="h4 font-weight-bold">After the Auction</p>
+        <p>
+          Once the auction closes the items will be awarded to the highest
+          bidder, unless the item has been purchased for the guaranteed price
+          prior. All minimum bids and buy now pricing are good while auction is
+          open. Items sold after the auction closes must be purchased for the
+          amount it was sold for during the auction or the FMV.
+        </p>
+        <p>
+          All items are sold as-is. All sales are final. There are no exchanges
+          or refunds on items. However, Boys & Girls Club will refund the full
+          purchase price if there is a failure of performance either on the part
+          of the Boys & Girls Club or the Donor.
+        </p>
+        <p>
+          California state sales tax will be charged when appropriate. Buyer
+          will be furnished an electronic receipt at the conclusion of the sale.
+        </p>
+        <p>
+          Certificates can be mailed within 10 days if the winner provides their
+          mailing address to info@bgcofcv.org. Otherwise, actual items must be
+          picked up only at Boys & Girls Clubs of Coachella Valley’s
+          Administrative office, 42600 Cook Street, Suite 120, Palm Desert,
+          Monday - Friday from 10am-4pm, beginning, Thursday, May 13th, 2021.
+        </p>
+        <p>
+          Please read your certificate carefully as it contains important
+          details and certain restrictions may apply. Certificates must be
+          redeemed by the designated dates and in the manner requested by the
+          donor. If certificates for services or experiences are not used by the
+          specified date, they will be forfeited.
+        </p>
+        <p>
+          Boys & Girls Clubs of Coachella Valley neither warrants nor
+          represents, and shall in no event be, responsible for the correctness
+          of descriptions, authenticity, authorship or condition of the property
+          described in travel packages.
+        </p>
+        <p>
+          Despite efforts to avoid the withdrawal of items from the sale after
+          they are listed it may sometimes be necessary. Auctioneer and the
+          Owner/Seller reserve the right to do so at any time before or during
+          the sale. The Owner/Sellers of property sold through this Site reserve
+          the right to reject any and all bids in their sole discretion.
+        </p>
+      </div>
+    </div>
   </div>
 </section>
 
