--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -108,6 +108,16 @@ permalink: index.html
         </div>
     </div>
 </section>
+<section class="py-5">
+    <div class="container d-flex justify-content-center">
+        <div class="row">
+            <div class="col-sm-12">
+  <img src="/assets/images/mathis-brothers-campaign.png" class="img-fluid" alt="Mathis Brothers Promotion">
+  
+            
+        </div>
+    </div>
+</div></section>
 {%- comment -%} <section class="py-5">
     <div class="container">
         <div class="row">
