Update auction event

--- a/root/jekyll/_events/virtual-grand-auction-2021.html
+++ b/root/jekyll/_events/virtual-grand-auction-2021.html
@@ -21,13 +21,8 @@ show: true
 
 <section class="row">
   <div class="container">
-    <div class="col-sm-12">
-      <p>
-        Registration & Item Preview opens 8 AM, Wednesday, May 5th. Bidding
-        opens at high-noon on Friday, May 7th and closes at 8 PM, Tuesday, May
-        11th. Event link and mobile code will be available on our website before
-        registration opens May 5th.
-      </p>
+    <div class="col-sm-12 justify-content-center">
+      <img src="/assets/images/bidding-instructions.jpg" style="width:100%" />
       {%- comment -%}
       <img class="img-fluid" src="/assets/images/campaign-auction.png" />
       {%- endcomment -%}
