Add auction registration link

--- a/root/jekyll/_events/virtual-grand-auction-2021.html
+++ b/root/jekyll/_events/virtual-grand-auction-2021.html
@@ -23,6 +23,10 @@ show: true
   <div class="container">
     <div class="col-sm-12 justify-content-center">
       <img src="/assets/images/bidding-instructions.jpg" style="width:100%" />
+      <div class="d-flex justify-content-center m-2">
+        <a href="https://text2bid.net/kiosk/kids"
+        target="_blank" rel="noopener" class="btn btn-primary">REGISTER NOW</a>
+      </div>
       {%- comment -%}
       <img class="img-fluid" src="/assets/images/campaign-auction.png" />
       {%- endcomment -%}
