Update home page

--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -45,6 +45,13 @@ permalink: index.html
 </section>
 <section class="py-5">
     <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <img src="/assets/images/winners.jpg" class="img-fluid w-100" alt="Winners">
+
+            </div></div></div></section>
+<section class="py-5">
+    <div class="container">
         <div class="row border rounded">
             <div class="col-lg-6 p-0">
                 <img src="/assets/images/campaign-auction.png" class="img-fluid w-100" alt="Grand Auction 2021">
