Remove references to auction

--- a/root/jekyll/_events/virtual-grand-auction-2021.html
+++ b/root/jekyll/_events/virtual-grand-auction-2021.html
@@ -21,16 +21,6 @@ show: true
 
 <section class="row">
   <div class="container">
-    <div class="col-sm-12 justify-content-center">
-      <img src="/assets/images/bidding-instructions.jpg" style="width:100%" />
-      <div class="d-flex justify-content-center m-2">
-        <a href="https://text2bid.net/kiosk/kids"
-        target="_blank" rel="noopener" class="btn btn-primary">REGISTER NOW</a>
-      </div>
-      {%- comment -%}
-      <img class="img-fluid" src="/assets/images/campaign-auction.png" />
-      {%- endcomment -%}
-    </div>
     {%- comment -%}
     <div class="col-sm-12">
       <img
@@ -41,6 +31,7 @@ show: true
     {%- endcomment -%}
   </div>
 </section>
+{% comment %}
 <section class="py-5">
   <div class="container">
     <div class="row">
@@ -122,8 +113,7 @@ show: true
     </div>
   </div>
 </section>
-
-{%- comment -%}
+{% endcomment %} {%- comment -%}
 <section class="py-5">
   <div class="container">
     <div class="row">
