Update SWG event

--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -1,9 +1,9 @@
 ---
 layout: events-layout
-title: Southwestern Growers Golf Tournament
+title: 56th Annual Southwestern Growers Golf Tournament
 description: >-
   Join us this year at our Annual Southwestern Growers Golf Tournament.
-image: /assets/images/iwcc-pic-2.png
+image: /assets/images/2021-swg.jpg
 start_date: 2021-09-17
 end_date: 2021-09-19
 contact:
@@ -121,13 +121,23 @@ show: true
     <div class="col-sm-12">
       <img
         class="img-fluid w-100"
-        src="/assets/images/tournament-winner.png"
+        src="/assets/images/swg-2021-save-the-date.jpg"
+      />
+      <div class="d-flex justify-content-around pt-3 pb-5">
+        <a class="btn btn-primary mx-1 text-uppercase" href="/assets/2021-SWG-Entry-Form.pdf" target="_blank">Download Form</a>
+        <a class="btn btn-primary mx-1 text-uppercase" href="https://interland3.donorperfect.net/weblink/weblink.aspx?name=E331203&id=59" target="_blank">Register Online</a>
+      </div>
+    </div>
+    <div class="col-sm-12">
+      <img
+        class="img-fluid w-100"
+        src="/assets/images/Sponsorship_Opportunities.jpg"
       />
     </div>
     <div class="col-sm-12">
       <img
         class="img-fluid w-100"
-        src="/assets/images/winners.png"
+        src="/assets/images/Loyal_Sponsors.jpg"
       />
     </div>
   </div>
