Update SWG event

--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -114,10 +114,14 @@ show: true
 #  description: Purchase tickets now!
 #  image: /assets/images/sgg-promotion.png
 #  link: "https://interland3.donorperfect.net/weblink/weblink.aspx?name=E331203&id=53"
+hideTitle: true
 ---
 
 <section class="container">
   <div class="row">
+    <div class="col-sm-12">
+      <p class="text-center">Optional practice round for tournament participants Thursday, September 16, 2021</p>
+    </div>
     <div class="col-sm-12">
       <img
         class="img-fluid w-100"
