--- a/root/jekyll/_pages/events.html
+++ b/root/jekyll/_pages/events.html
@@ -61,11 +61,10 @@ permalink: events.html
           <div
             style="
               z-index: 3;
-              margin-top: -1rem;
               margin-left: 4%;
               margin-right: 4%;
             "
-            class="card-body shadow text-center rounded bg-white"
+            class="card-body shadow text-center bg-white"
           >
             <span class="text-muted text-uppercase font-weight-bold"
               >Upcoming</span
