Remove registration form and link

--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -127,10 +127,10 @@ hideTitle: true
         class="img-fluid w-100"
         src="/assets/images/swg-2021-save-the-date.jpg"
       />
-      <div class="d-flex justify-content-around pt-3 pb-5">
+      <!-- <div class="d-flex justify-content-around pt-3 pb-5">
         <a class="btn btn-primary mx-1 text-uppercase" href="/assets/2021-SWG-Entry-Form.pdf" target="_blank">Download Form</a>
         <a class="btn btn-primary mx-1 text-uppercase" href="https://interland3.donorperfect.net/weblink/weblink.aspx?name=E331203&id=59" target="_blank">Register Online</a>
-      </div>
+      </div> -->
     </div>
     <div class="col-sm-12">
       <img
