Update SGG event with content about registration

--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -120,6 +120,7 @@ hideTitle: true
 <section class="container">
   <div class="row">
     <div class="col-sm-12">
+      <h4 class="text-center mb-4">To inquire about registration please call <a href="tel:1-760-836-1160">(760)-836-1160</a></h4>
       <p class="text-center">Optional practice round for tournament participants Thursday, September 16, 2021</p>
     </div>
     <div class="col-sm-12">
