Update business hours

--- a/root/jekyll/_pages/ways-to-give.html
+++ b/root/jekyll/_pages/ways-to-give.html
@@ -4,10 +4,9 @@ title: Why Giving Matters
 hero: assets/images/ways-to-give-1.jpg
 description: >-
   Last year **6,500** youth participated in life-changing programs and fun
-  activities at one of our four clubhouses throughout the Coachella Valley. It
-  costs **$500 per child** to provide program and activities for an entire year.
+  activities at one of our four clubhouses throughout the Coachella Valley.
   Join our life-changing movement by giving a gift that lasts a lifetime in
-  support of our Clubs!
+  support of our Clubs! Contact your local club today for details.
 video:
   description: >-
     Long ago, the mice had a general council to consider what measures they
