--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -105,7 +105,7 @@ permalink: index.html
                                 <div class="p-2">
                                     <p>The Boys & Girls Clubs of Coachella Valley sites are now open for children between the ages of 7 and 18</p>
                                     
-                                    <p>Hours of operation are 7:30 a.m. to 5:30 p.m. Members will be provided free
+                                    <p>Hours of operation are 2:00pm to 7:00pm. Members will be provided free
                                         breakfast, lunch, dinner and a snack. </p>
                                     <p>The clubs operate as educational enrichment centers to assist with
                                         distance learning. Daily program schedules are in coordination with both Desert
@@ -115,8 +115,8 @@ permalink: index.html
                                         temperature and wellness checks. </p>
                                     <p>To comply with public health guidelines, daily attendance is limited and all
                                         members must be registered, no drop-offs or walk-ins call club for further
-                                        details. The membership cost during the school year is $50.00. </p>
-                                    <p>For more information, call the club your child is interested in attending:</p>
+                                        details. </p>
+                                    <p>For membership cost and other information, call the club your child is interested in attending:</p>
                                     <ul>
                                         <li>La Quinta &ndash; (760) 564-5555</li>
                                         <li>Indio &ndash; (760) 347-5712</li>
