--- a/root/jekyll/_events/sports-heroes-luncheon.html
+++ b/root/jekyll/_events/sports-heroes-luncheon.html
@@ -26,7 +26,7 @@ time:
     startTime: "10:30 am"
 location: Hyatt Regency Resort and Spa
 address: "44600 Indian Wells Ln, Indian Wells, CA 92210"
-show: true
+show: false
 ---
 
 <section class="row">
