--- a/root/jekyll/_events/virtual-grand-auction-2022.html
+++ b/root/jekyll/_events/virtual-grand-auction-2022.html
@@ -1,10 +1,10 @@
 ---
 layout: events-layout
-title: Virtual Grand Auction 2021
-description: Spring into Action, Bid to help a Kid!
-image: /assets/images/campaign-auction.png
-start_date: 2021-05-07
-end_date: 2021-05-11
+title: Grandest Auction 2022
+description: Save the Date!
+image: /assets/images/logo3.jpg
+start_date: 2022-03-12
+end_date: ""
 contact:
   email: bkerr@bgcofcv.org
   name: Bridget Kerr
@@ -14,13 +14,22 @@ contact:
   title: Director of Special Events
 callToAction: null
 time: null
-location: null
+location: Hyatt Regency Indian Wells Resort & Spa
 address: null
 show: true
+isActive: true
 ---
 
 <section class="row">
   <div class="container">
+    <div class="col-sm-12">
+
+      <p>5 PM Silent Auction, Hosted Cocktails & Hors d’oeuvres</p>
+
+      <p>6:30 PM Dinner & Live Auction</p>
+
+      <p>Tickets on sale soon!</p>
+    </div>
     {%- comment -%}
     <div class="col-sm-12">
       <img
