Add swg winners

--- a/root/jekyll/index.html
+++ b/root/jekyll/index.html
@@ -47,6 +47,13 @@ permalink: index.html
     <div class="container">
         <div class="row">
             <div class="col-12">
+                <img src="/assets/images/winners-2021.png" class="img-fluid w-100" alt="Winners">
+
+            </div></div></div></section>
+<section class="py-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
                 <img src="/assets/images/winners.jpg" class="img-fluid w-100" alt="Winners">
 
             </div></div></div></section>
