--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -13,9 +13,9 @@ contact:
     extension: "105"
     number: (760) 836-1160
   title: Director of Special Events
-# callToAction:
-#  text: 2020 SWG Pairings
-#  url: "/assets/2020-SWG-Flights.pdf"
+callToAction:
+  text: 2021 SWG Flight Winners
+  url: "/assets/2021-swg-winners.pdf"
 time:
   endTime: Invalid date
   startTime: Invalid date
@@ -117,21 +117,38 @@ show: true
 hideTitle: true
 ---
 
+{%- comment -%}
 <section class="container">
   <div class="row">
     <div class="col-sm-12">
-      <h4 class="text-center mb-4">To inquire about registration please call <a href="tel:1-760-836-1160">(760)-836-1160</a></h4>
-      <p class="text-center">Optional practice round for tournament participants Thursday, September 16, 2021</p>
+      <h4 class="text-center mb-4">
+        To inquire about registration please call
+        <a href="tel:1-760-836-1160">(760)-836-1160</a>
+      </h4>
+      <p class="text-center">
+        Optional practice round for tournament participants Thursday, September
+        16, 2021
+      </p>
     </div>
     <div class="col-sm-12">
       <img
         class="img-fluid w-100"
         src="/assets/images/swg-2021-save-the-date.jpg"
       />
-      <!-- <div class="d-flex justify-content-around pt-3 pb-5">
-        <a class="btn btn-primary mx-1 text-uppercase" href="/assets/2021-SWG-Entry-Form.pdf" target="_blank">Download Form</a>
-        <a class="btn btn-primary mx-1 text-uppercase" href="https://interland3.donorperfect.net/weblink/weblink.aspx?name=E331203&id=59" target="_blank">Register Online</a>
-      </div> -->
+      <div class="d-flex justify-content-around pt-3 pb-5">
+        <a
+          class="btn btn-primary mx-1 text-uppercase"
+          href="/assets/2021-SWG-Entry-Form.pdf"
+          target="_blank"
+          >Download Form</a
+        >
+        <a
+          class="btn btn-primary mx-1 text-uppercase"
+          href="https://interland3.donorperfect.net/weblink/weblink.aspx?name=E331203&id=59"
+          target="_blank"
+          >Register Online</a
+        >
+      </div>
     </div>
     <div class="col-sm-12">
       <img
@@ -140,10 +157,8 @@ hideTitle: true
       />
     </div>
     <div class="col-sm-12">
-      <img
-        class="img-fluid w-100"
-        src="/assets/images/Loyal_Sponsors.jpg"
-      />
+      <img class="img-fluid w-100" src="/assets/images/Loyal_Sponsors.jpg" />
     </div>
   </div>
 </section>
+{%- endcomment -%}
