Add winners pictures for golf tournament

--- a/root/jekyll/_events/southern-growers-golf-tournament.html
+++ b/root/jekyll/_events/southern-growers-golf-tournament.html
@@ -117,6 +117,20 @@ show: true
 hideTitle: true
 ---
 
+<section class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <img class="img-fluid w-100" src="/assets/images/winners-1.png" />
+    </div>
+    <div class="col-sm-12">
+      <img class="img-fluid w-100" src="/assets/images/winners-2.png" />
+    </div>
+    <div class="col-sm-12">
+      <img class="img-fluid w-100" src="/assets/images/winners-3.png" />
+    </div>
+  </div>
+</section>
+
 {%- comment -%}
 <section class="container">
   <div class="row">
