Upate auction event

--- a/root/jekyll/_events/virtual-grand-auction-2022.html
+++ b/root/jekyll/_events/virtual-grand-auction-2022.html
@@ -2,7 +2,7 @@
 layout: events-layout
 title: Grandest Auction 2022
 description: Save the Date!
-image: /assets/images/logo3.jpg
+image: /assets/images/auction-thumbnail.png
 start_date: 2022-03-12
 end_date: ""
 contact:
@@ -28,16 +28,14 @@ isActive: true
 
       <p>6:30 PM Dinner & Live Auction</p>
 
-      <p>Tickets on sale soon!</p>
+      <h3><b>Tickets go on sale December 1<sup>st</sup></b></h3>
     </div>
-    {%- comment -%}
     <div class="col-sm-12">
       <img
         class="img-fluid"
-        src="/assets/images/BGCCV DS Auction 2020_Page_2.png"
+        src="/assets/images/auction-flyer.jpg"
       />
     </div>
-    {%- endcomment -%}
   </div>
 </section>
 {% comment %}
