--- a/root/jekyll/_events/virtual-grand-auction-2022.html
+++ b/root/jekyll/_events/virtual-grand-auction-2022.html
@@ -1,6 +1,6 @@
 ---
 layout: events-layout
-title: Grandest Auction 2022
+title: The Grandest Auction 2022
 description: Save the Date!
 image: /assets/images/auction-thumbnail.png
 start_date: 2022-03-12
@@ -18,6 +18,7 @@ location: Hyatt Regency Indian Wells Resort & Spa
 address: null
 show: true
 isActive: true
+permalink: /events/the-grandest-auction-2022
 ---
 
 <section class="row">
