Add link to purchase tickets for auction event

--- a/root/jekyll/_events/virtual-grand-auction-2022.html
+++ b/root/jekyll/_events/virtual-grand-auction-2022.html
@@ -12,7 +12,9 @@ contact:
     extension: 105
     number: (760)-836-1160
   title: Director of Special Events
-callToAction: null
+callToAction:
+  text: Purchase Tickets & Tables
+  url: https://secure.maestroweb.com/Default.aspx?OrgID=1648
 time: null
 location: Hyatt Regency Indian Wells Resort & Spa
 address: null
